- Blob data could not be viewed if result contained field from more than one table
- Dialogs once re-opened behaved erratically on minimize/restore
- Changing table engine type erroneously generated drop primary key statement for some tables
- Record editing could not save record if the where clause contained certain text
General:
- updated language on the interface where some of the text did not translate properly
- Cleaned up themes and standardized message/error display interface

-------------------------------
version 2.8
-------------------------------
Updates:
- Added data import option from CSV files into tables
- Added batch operation module. Allows performing various operations on multiple objects in database easily
  (add/remove table prefixes, drop objects, generate sql commands for selected objects etc.)
- Added quick search in information display tables for quickly filtering result data
- Improved SQLite support 
- Automatically refresh object list after completing batch imports (requested by umairj)
- suppressed warning in error log on some PHP versions (requested by Danny)
- Language names appear in their own language in menus for ease of understanding 
Bug Fixes:
- Lots of issues fixed in SQLite database handling
- where clause generated query error in updates if it contained text fields
- many corrections in multilingual strings in the languages
General:
- Updated jquery/codemirror2 to latest version

-------------------------------
version 2.7.6
-------------------------------
Updates:
- Updated codemirror2 to latest version and improved mysql syntax highlighting
Bug Fixes:
- More fixes to login failure / display problems with FASTCGI servers
General:

-------------------------------
version 2.7.5
-------------------------------
Updates:
- default interface language can now be set in configuration
- installation package now contains all files inside a root folder (requested by some users)
Bug Fixes: